[gd_scene load_steps=15 format=2]

[ext_resource path="res://instructions/Instructions.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://title_screen/title_screen.gd" type="Script" id=7]
[ext_resource path="res://title_screen/images/character_sitting/lilguymainscreen1.png" type="Texture" id=8]
[ext_resource path="res://title_screen/images/character_sitting/lilguymainscreen3.png" type="Texture" id=9]
[ext_resource path="res://title_screen/images/character_sitting/lilguymainscreen2.png" type="Texture" id=10]
[ext_resource path="res://title_screen/music/My_Song_3.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 5 )

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Center Row" type="HBoxContainer" parent="Menu"]
margin_top = 68.0
margin_right = 1040.0
margin_bottom = 501.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/Center Row"]
margin_right = 518.0
margin_bottom = 433.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="New Game Button" type="Button" parent="Menu/Center Row/Buttons"]
margin_top = 112.0
margin_right = 518.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "New Game"
flat = true
align = 0

[node name="Controls Button" type="Button" parent="Menu/Center Row/Buttons"]
margin_top = 188.0
margin_right = 518.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 2 )
text = "Controls"
flat = true
align = 0

[node name="Quit Button" type="Button" parent="Menu/Center Row/Buttons"]
margin_top = 264.0
margin_right = 518.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
flat = true
align = 0

[node name="CenterContainer" type="CenterContainer" parent="Menu/Center Row"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 433.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="Menu/Center Row/CenterContainer"]
position = Vector2( 529.34, 253.896 )
scale = Vector2( 0.455484, 0.455484 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="Version" type="Label" parent="Menu"]
margin_top = 505.0
margin_right = 1040.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 5 )
text = "Version 1.0.0
Hexadoon Studios LLC"

[node name="Fade In" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Background Music" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Background Music"]
position = Vector2( 640, 512 )
stream = ExtResource( 11 )
volume_db = -12.5
autoplay = true

[node name="Tween" type="Tween" parent="Background Music"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Instructions" parent="CanvasLayer" instance=ExtResource( 1 )]
visible = false
[connection signal="pressed" from="Menu/Center Row/Buttons/New Game Button" to="." method="_on_New_Game_Button_pressed"]
[connection signal="pressed" from="Menu/Center Row/Buttons/Controls Button" to="CanvasLayer/Instructions" method="_on_Button_pressed"]
[connection signal="pressed" from="Menu/Center Row/Buttons/Quit Button" to="." method="_on_Quit_Button_pressed"]
[connection signal="fade_finished" from="Fade In" to="." method="_on_Fade_In_fade_finished"]
[connection signal="finished" from="Background Music/AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
